syntax = "proto3";
package dalalstreet.api.actions;

message CancelOrderRequest {
    uint32 order_id = 1;
    bool   is_ask = 2;
}
message CancelOrderResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        MarketClosedError = 2;
        InvalidOrderId = 3;
    }
    StatusCode status_code = 1;
    string status_message = 2;
}