syntax = "proto3";

package proto;

option java_package = "dalalstreet.api.actions";
option java_multiple_files = true;

import "models/Ask.proto";
import "models/Bid.proto";

message GetMyOpenOrdersRequest {
    // No request data for GetMyOpenOrders
}
message GetMyOpenOrdersResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    repeated Ask open_ask_orders = 3;
    repeated Bid open_bid_orders = 4;
}

// GetMyClosedAsks
message GetMyClosedAsksRequest {
    uint32 last_order_id = 1;
    uint32 count = 2;
}
message GetMyClosedAsksResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        InvalidOrderId = 32;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    bool                more_exists = 3;
    repeated Ask closed_ask_orders = 4;
}

// GetMyClosedBids
message GetMyClosedBidsRequest {
    uint32 last_order_id = 1;
    uint32 count = 2;
}
message GetMyClosedBidsResponse {
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        InvalidOrderId = 32;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

    bool                more_exists = 3;
    repeated Bid closed_bid_orders = 4;
}
