syntax = "proto3";

package dalalstreet.api.datastreams;

option java_multiple_files=true;

import "models/OrderType.proto";

message MyOrderUpdate {
    uint32 id = 1;
    bool   is_ask = 2;
    uint64 trade_quantity = 3;
    bool   is_closed = 4;
    bool   is_new_order = 5;
    uint32 stock_id = 6;
    uint64 order_price = 7;
    models.OrderType order_type = 8;
    uint64 stock_quantity = 9;
}
